# lmnr

./: .env  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE.md  README.md  REPORT.md  TODO.md  browser-use-mcp-test-report.md  clickhouse-profiles-config.xml  comparison.md  context7.json  docker-compose-full.yml  docker-compose-local-build.yml  docker-compose-local-dev-full.yml  docker-compose-local-dev.yml  docker-compose.yml  notes.md  package.json  pnpm-lock.yaml  tmp.sql  ts-frameworks.md
agent-manager/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent-manager/proto/: agent_manager_grpc.proto
agent-manager/src/: agent_manager_grpc_pb2.py  agent_manager_grpc_pb2.pyi  agent_manager_grpc_pb2_grpc.py  main.py
app-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  gemini_head.rs
app-server/data/: LICENSE.txt  adjectives.txt  nouns.txt
app-server/proto/: agent_manager_grpc.proto  code_executor_grpc.proto  code_orchestrator_grpc.proto  machine_manager_grpc.proto  query_engine.proto  semantic_search_grpc.proto
app-server/proto/opentelemetry/: common.proto  logs.proto  resource.proto  trace.proto  trace_service.proto
app-server/proto/quickwit/: ingest_service.proto
app-server/src/: grpc_monitoring.rs  main.rs
app-server/src/agent_manager/: agent_manager_grpc.rs  agent_manager_impl.rs  channel.rs  cookies.rs  mock.rs  mod.rs  storage_state.rs  types.rs  worker.rs
app-server/src/ai_gateway/: mod.rs
app-server/src/api/: mod.rs  utils.rs
app-server/src/auth/: cli_user.rs  jwks.rs  jwt.rs  mod.rs
app-server/src/batch_worker/: config.rs  message_handler.rs  mod.rs  worker.rs  worker_pool.rs
app-server/src/browser_events/: mod.rs
app-server/src/cache/: autocomplete.rs  cache.rs  connection.rs  in_memory.rs  keys.rs  mod.rs  redis.rs
app-server/src/ch/: browser_events.rs  cloud.rs  clusters.rs  data_plane.rs  datapoints.rs  deduped_content.rs  direct.rs  evaluation_datapoint_outputs.rs  evaluation_datapoints.rs  evaluation_scores.rs  evaluator_scores.rs  events.rs  labeling_queue_items.rs  labels.rs  limits.rs  llm_messages.rs  logs.rs  messages.rs  mod.rs  modifiers.rs  notification_deliveries.rs  notification_log.rs  notification_logs.rs  notifications.rs  projects.rs  route.rs  service.rs  shared_content.rs  signal_events.rs  signal_run_messages.rs  signal_runs.rs  spans.rs  tags.rs  trace_analysis_messages.rs  traces.rs  utils.rs
app-server/src/checkpoints/: classifier.rs  consumer.rs  llm.rs  mod.rs  observe.rs  producer.rs  subagent.rs  system_prompt.rs  version.rs
app-server/src/chunk/: character_split.rs  mod.rs  runner.rs
app-server/src/clustering/: batching.rs  clustering.rs  mod.rs  public.rs  queue.rs
app-server/src/code_executor/: code_executor_grpc.rs  code_executor_impl.rs  default.rs  mock.rs  mod.rs
app-server/src/data_plane/: auth.rs  client.rs  crypto.rs  data_processor.rs  mod.rs  read.rs
app-server/src/data_plane_client/: mod.rs  read.rs  write.rs
app-server/src/data_processor/: auth.rs  crypto.rs  mod.rs  read.rs  write.rs
app-server/src/datasets/: datapoints.rs  mod.rs  service.rs  utils.rs
app-server/src/db/: agent_chats.rs  agent_manager.rs  agent_messages.rs  agents.rs  alert_targets.rs  api_keys.rs  custom_model_costs.rs  datapoints.rs  datasets.rs  debugger_sessions.rs  evaluations.rs  evaluators.rs  event_cluster_configs.rs  event_definitions.rs  event_templates.rs  events.rs  filters.rs  labeling_queues.rs  labels.rs  limits.rs  machine_manager.rs  metrics.rs  mod.rs  model_costs.rs  modifiers.rs  playgrounds.rs  prices.rs  project_api_keys.rs  project_settings.rs  projects.rs  provider_api_keys.rs  reports.rs  rollout_playgrounds.rs  rollout_sessions.rs  semantic_event_definitions.rs  semantic_event_trigger_spans.rs  signal_jobs.rs  signal_triggers.rs  signals.rs  slack_channel_to_events.rs  (+16 more)
app-server/src/debugger/: mod.rs  tests.rs
app-server/src/engine/: engine.rs  mod.rs
app-server/src/env/: batching.rs  clickhouse.rs  connections.rs  database.rs  debugger.rs  llm.rs  mock.rs  mod.rs  mq.rs  notifications.rs  observability.rs  quickwit.rs  rate_limit.rs  secrets.rs  server.rs  sql.rs  storage.rs  workers.rs
app-server/src/evaluations/: mod.rs  realtime.rs  stats.rs  utils.rs  worker.rs
app-server/src/evaluators/: mod.rs
app-server/src/features/: mod.rs
app-server/src/files/: mod.rs
app-server/src/instrumentation/: internal_exporter.rs  mod.rs  spans.rs
app-server/src/labels/: mod.rs
app-server/src/language_model/: chat_message.rs  mod.rs  runner.rs
app-server/src/llm/: mock.rs  mod.rs  models.rs  sse.rs
app-server/src/logs/: consumer.rs  grpc_service.rs  mod.rs  producer.rs
app-server/src/machine_manager/: machine_manager_service_grpc.rs  mod.rs
app-server/src/mq/: connection.rs  mod.rs  outbox.rs  rabbit.rs  tokio_mpsc.rs  utils.rs
app-server/src/names/: mod.rs
app-server/src/notifications/: delivery.rs  email.rs  mod.rs  slack.rs  utils.rs
app-server/src/opentelemetry/: mod.rs  (+3 more)
pii-redactor/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
pii-redactor/proto/: pii_redactor.proto
pii-redactor/src/: engine.rs  json_walker.rs  labels.rs  main.rs  proto.rs
python-executor/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
python-executor/python_executor/: code_executor_grpc_pb2.py  code_executor_grpc_pb2.pyi  code_executor_grpc_pb2_grpc.py  lmnr_types.py  log.py  server.py  utils.py
query-engine/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
query-engine/proto/: query_engine.proto
query-engine/src/: json_to_sql.py  query_engine_pb2.py  query_engine_pb2.pyi  query_engine_pb2_grpc.py  query_validator.py  server.py  sql_to_json.py  utils.py
query-engine/tests/: test_json_sql_conversion.py  test_validation.py
semantic-search-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  start_qdrant.sh
semantic-search-service/proto/: semantic_search_grpc.proto
semantic-search-service/src/: main.rs
(+3699 files in other folders)
