[project]
dependencies = [
  "grpcio>=1.67.0",
  "lmnr-index",
  "python-dotenv>=1.1.0",
  "scrapybara>=2.4.7",
]
description = "Add your description here"
name = "agent-manager"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "grpcio-tools>=1.67.0",
]

[tool.uv.sources]
lmnr-index = {git = "https://github.com/lmnr-ai/index.git", rev = "index"}
