[project]
dependencies = [
  "asyncpg>=0.30.0",
  "grpcio>=1.67.0",
  "lmnr-index>=0.1.7",
  "python-dotenv>=1.1.0",
  "scrapybara>=2.4.7",
]
description = "Add your description here"
name = "agent-manager"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "grpcio-tools>=1.67.0",
]
