[package]
edition = "2021"
name = "app-server"
version = "0.1.0"

[dependencies]
actix-web = "4"
anyhow = "1"
env_logger = "0.11"
futures-util = "0.3"
tonic = {version = "0.13", features = ["gzip"]}

# workaround [AFIT](https://rust-lang.github.io/rfcs/3185-static-async-fn-in-trait.html)
# while [the feature](https://github.com/rust-lang/rust/pull/115822#issuecomment-1718261458) 
# is lacking full support.
async-trait = "0.1"

actix-multipart = "0.7.2"
actix-service = "2.0.3"
actix-web-httpauth = "0.8.2"
actix-ws = "0.3.0"
async-stream = "0.3.6"
aws-config = "1.6.1"
aws-sdk-s3 = "1.82.0"
backoff = {version = "0.4.0", features = ["tokio"]}
base64 = "0.22.1"
bytes = "1.10.1"
chrono = {version = "0.4.40", features = ["serde"]}
clickhouse = {version = "0.13.2", features = ["rustls-tls", "uuid"]}
csv = "1.3.0"
dashmap = "6.1.0"
deadpool = "0.12.2"
dotenv = "0.15"
enum_delegate = "0.2.0"
enum_dispatch = "0.3.13"
futures = "0.3"
lapin = "2.5.1"
lazy_static = "1.5.0"
log = "0.4.27"
moka = {version = "0.12.10", features = ["sync", "future"]}
num_cpus = "1.16.0"
prost = "0.13"
rand = "0.9.0"
redis = {version = "0.29.2", features = ["tokio-comp"]}
regex = "1.11.1"
rustls = {version = "0.23", features = ["ring"]}
serde = "1.0"
serde-jsonlines = "0.7.0"
serde_json = {version = "1.0.140", features = ["raw_value"]}
sha3 = "0.10.8"
sodiumoxide = "0.2.7"
sqlx = {version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono", "bigdecimal"]}
thiserror = "2"
time = "0.3.41"
tokio = {version = "1.44", features = ["macros", "rt-multi-thread"]}
tokio-stream = {version = "0.1", features = ["net"]}
tokio-tungstenite = "0.26"
url = "2.5.4"
uuid = {version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}

[build-dependencies]
tonic-build = "0.13"
