[package]
edition = "2024"
name = "pii-redactor"
version = "0.1.0"

[[bin]]
name = "pii-redactor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive", "env"]}
ndarray = "0.16"
ort = {version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "tracing", "load-dynamic"]}
prost = "0.14"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokenizers = {version = "0.21", default-features = false, features = ["onig"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread", "signal"]}
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[build-dependencies]
tonic-prost-build = "0.14"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
