[project]
name = "query-engine"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

dependencies = [
  "dotenv>=0.9.9",
  "grpcio-tools>=1.74.0",
  "grpcio>=1.60.0",
  # newer versions of sqlglot break some of the functionality
  # and are incompatible with the `rs` extra (rust parsing engine).
  # We are going to move this library to a module in app-server,
  # so not investing in updating and maintaining this dep for now.
  "sqlglot[rs]==27.29.0",
]

[dependency-groups]
dev = [
  "grpcio>=1.74.0",
  "pytest>=9.0.3",
  "grpcio-tools>=1.60.0",
  "pandas>=2.3.1",
  "pytest-sugar>=1.1.1",
]
