[package]
edition = "2021"
name = "semantic-search-service"
version = "0.1.0"

[dependencies]
anyhow = "1"
chrono = {version = "0.4.39", features = ["serde"]}
dotenv = "0.15.0"
enum_dispatch = "0.3.12"
env_logger = "0.10.0"
futures = "0.3"
indexmap = "2.7.0"
log = "0.4.20"
prost = "0.13"
qdrant-client = "1.13"
reqwest = {version = "0.12.12", default-features = false, features = ["rustls-tls", "json"]}
serde = "1"
serde_json = "1.0.105"
simsimd = "3.9.0"
tokio = {version = "1.24", features = ["macros", "rt-multi-thread"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
