[package]
edition = "2021"
name = "semantic-search-service"
version = "0.1.0"

[dependencies]
anyhow = "1"
chrono = {version = "0.4.40", features = ["serde"]}
dotenv = "0.15.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
futures = "0.3"
indexmap = "2.8.0"
log = "0.4.27"
prost = "0.13"
qdrant-client = "1.13"
reqwest = {version = "0.12.15", default-features = false, features = ["rustls-tls", "json"]}
serde = "1"
serde_json = "1.0.140"
simsimd = "6.4.1"
tokio = {version = "1.44", features = ["macros", "rt-multi-thread"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
